feat: edit single image to many images
